--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start to Play</h1>
+  <h1 class="" id="level-title">Press A Key to Start Play</h1>
   <div class="container">
     <div lass="row">
 
